* Tue Mar 25 2025 Brian Read <brianr@koozali.org> 11.0.0-73.sme - Some changes to error message format in css. - Fix DB Cache problem with port forwarding panel [SME: 12970] - Fix error and success message display for port forwarding panel [SME: 12969]

--- a/root/usr/share/smanager/themes/default/public/css/new-sme-main.css
+++ b/root/usr/share/smanager/themes/default/public/css/new-sme-main.css
@@ -201,11 +201,13 @@ body.menu {
 
 div.error, div.sme-error, span.error, span.sme-error {
     color: red;
-    background-color: #fff;
+    background-color: #f9f9f9;
     border-width: 1px;
     border-style: solid;
     border-color: red;
-    padding: 2px;
+    padding: 10px;
+    border-radius: 10px;
+    
 }
 
 form {
@@ -493,5 +495,6 @@ div.success, span.success {
      border-width: 1px;
      border-style: solid;
      border-color: #006400 ;
-     padding: 8px;
+     padding: 10px;
+     border-radius: 10px;
 }
