* Fri Apr 11 2025 Brian Read <brianr@koozali.org> 11.0.0-76.sme - Restore css for roundcube embedded  [SME: 12987]

--- a/root/usr/share/smanager/themes/default/public/css/new-sme-main.css
+++ b/root/usr/share/smanager/themes/default/public/css/new-sme-main.css
@@ -498,3 +498,8 @@ div.success, span.success {
      padding: 10px;
      border-radius: 10px;
 }
+
+div.roundcube #roundcube{
+	width:100%;
+	height:600px;
+}
