* Wed Jul 02 2025 Brian Read <brianr@koozali.org> 11.0.0-101.sme - Fix busy cursor, csp intervened. [SME: 13064]

--- a/root/usr/share/smanager/themes/default/public/css/new_sme.css
+++ b/root/usr/share/smanager/themes/default/public/css/new_sme.css
@@ -281,3 +281,13 @@ background-color: #e8f3e1;
      text-decoration: none;
     /* Or any other style you want to reset */
 }
+
+#busy-indicator {
+	display: none;
+	margin-top: 10px;
+	font-weight: bold;
+	color: red;
+}
+.busy {
+	cursor: wait; /* Change the cursor to a 'wait' cursor */
+}
