--- a/root/usr/share/smanager/themes/default/public/css/new-sme-main.css
+++ b/root/usr/share/smanager/themes/default/public/css/new-sme-main.css
@@ -503,3 +503,19 @@ div.roundcube #roundcube{
 	width:100%;
 	height:600px;
 }
+
+.center {
+  display: flex;
+  align-items: center;
+  width: 100%; /* adjust as needed */
+}
+
+.left-btn {
+  /* Left aligned */
+}
+
+.center-btn {
+  /* Center aligned */
+  margin-left: auto!important;
+  margin-right: auto;
+}
