* Fri Oct 24 2025 Brian Read <brianr@koozali.org> 11.0.0-124.sme - Adjust CSS for logout button to remove overlap of border and rounding [SME: 13247]

--- a/root/usr/share/smanager/themes/default/public/css/new_sme.css
+++ b/root/usr/share/smanager/themes/default/public/css/new_sme.css
@@ -63,7 +63,7 @@
     position: absolute;
     left: 7%;
     transform: translateX(-50%);
-    background-color: #4caf50b8;
+    background-color: #4caf50;
     color: white !important;
     border: none;
     padding: 8px;
