* Tue Nov 04 2025 Brian Read <brianr@koozali.org> 11.0.0-128.sme - Move group table to under others in User accounts setup panel [SME: 13068]

--- a/root/usr/share/smanager/themes/default/public/css/new-sme-main.css
+++ b/root/usr/share/smanager/themes/default/public/css/new-sme-main.css
@@ -519,3 +519,8 @@ div.roundcube #roundcube{
   margin-left: auto!important;
   margin-right: auto;
 }
+
+table.incolumn {
+	margin:auto;
+	color:red;
+}
