* Tue Nov 04 2025 Brian Read <brianr@koozali.org> 11.0.0-130.sme - Adjust heading so that no white line under theme selector and move theme button in [SME: 13057]

--- a/root/usr/share/smanager/themes/default/public/css/new_sme.css
+++ b/root/usr/share/smanager/themes/default/public/css/new_sme.css
@@ -122,6 +122,7 @@
     max-width: 100%;
     position: relative;
     margin: auto;
+    margin-top:-20px;
 }
 
 #header2 {
@@ -290,4 +291,8 @@ background-color: #e8f3e1;
 }
 .busy {
 	cursor: wait; /* Change the cursor to a 'wait' cursor */
+}
+
+#swt_theme {
+	margin-left:10px;
 }
