* Wed Dec 03 2025 Brian Read <brianr@koozali.org> 11.0.0-144.sme - Fix uninit var in portforwarding.pm  [SME: 12970] - Take out link href for section headings and add css for them to supress hover etc [SME: 13238] - Arrange that Legacy section heading is translated [SME: 13366] - Fix concat failure in yum.pm when available software called [SME: 13373] - Take out Locale lexicon missing warning [SME: 13374]

--- a/root/usr/share/smanager/themes/default/public/css/new-sme-main.css
+++ b/root/usr/share/smanager/themes/default/public/css/new-sme-main.css
@@ -524,3 +524,23 @@ table.incolumn {
 	margin:auto;
 	color:red;
 }
+
+.section-title {
+    color: #006633 !important;
+}
+
+.section-title:hover {
+    color: #006633 !important;
+}
+
+.section-title:visited {
+    color: #006633 !important;
+}
+
+.section-title:focus {
+    color: #006633 !important;
+}
+
+.section-title:active {
+    color: #006633 !important;
+}
