--- a/root/usr/share/smanager/themes/default/public/css/viewlogfiles.css
+++ b/root/usr/share/smanager/themes/default/public/css/viewlogfiles.css
@@ -32,14 +32,14 @@ body {
 }
 
 /* All table rules now scoped specifically to #log-body */
-#log-body {
+#log-body,#log-body-legacy {
   width: 100%;
   border-collapse: collapse;
   background-color: white;
   display: table;
 }
 
-#log-body tr {
+#log-body,#log-body-legacy tr {
   background-color: white;
   display: table-row;
 }
@@ -56,6 +56,10 @@ body {
   display: table-cell;
 }
 
+#log-body-legacy td.line-num {
+  display: none;
+}
+
 #log-body td pre {
   margin: 0;
   padding: 4px 8px;
@@ -66,7 +70,19 @@ body {
   display: block;
 }
 
-#log-body .hl {
+#log-body-legacy td pre {
+    display: block;
+    font-family: monospace;
+    unicode-bidi: isolate;
+    white-space: pre;
+    margin-block: 1em 1em;
+    margin-inline: 0px;
+    font-size:11px;
+    padding:0;
+    margin:0;
+}
+
+#log-body,#log-body-legacy .hl {
   background-color: #ffffcc;
   color: #000000;
   padding: 1px 4px;
