* Wed Feb 25 2026 Brian Read <brianr@koozali.org> 11.0.0-172.sme - Fix missing password strength in update routine in useraccounts controller [SME: 13450]

--- a/root/usr/share/smanager/themes/default/public/css/viewlogfiles.css
+++ b/root/usr/share/smanager/themes/default/public/css/viewlogfiles.css
@@ -3,7 +3,7 @@
     background: #1a1a1a;
     color: #ddd;
     margin: 0;
-    height: 70vh;
+    height: 74vh;
     overflow: hidden;
 }
 
@@ -119,6 +119,7 @@ body {
   background: white;
   color:black;
   display: block;
+  padding:1px;
 }
 
 
