* Sat Feb 28 2026 Brian Read <brianr@koozali.org> 11.0.0-176.sme - Refactor some of yum.pm [SME: 12400] - move file monitoring for completion to dnf status [SME: 12400] - add enhanced package selection control [SME: 12400]

--- a/root/usr/share/smanager/themes/default/public/css/new-sme-main.css
+++ b/root/usr/share/smanager/themes/default/public/css/new-sme-main.css
@@ -329,13 +329,25 @@ span.data2 {
 }
 
 span.label {
-    display: inline-block;
-    font-weight: bold;
-    background-color: #e8f3e1;
-    width: 30%;
-    text-align: right;
-    vertical-align:top;
-    
+  display: inline-block;
+  font-weight: bold;
+  background-color: #e8f3e1;
+  width: 30%;
+  text-align: right;
+  vertical-align: top;
+}
+
+span.data {
+  padding: 2px;
+  font-weight: bold;
+  margin-left: 0;
+
+  /* add: make it a column next to label */
+  display: inline-block;
+  width: 70%;
+  vertical-align: top;
+  box-sizing: border-box;
+  padding-left: 10px;   /* optional spacing from label */
 }
 
 span.label2 {
